# Flatter

./: README.rst  main.py  pyproject.toml  setup.py
flatter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: flatter.py
tests/: test_arrays.py
tests/data/: arrays.json
